--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
     id 'org.beryx.jlink' version '2.25.0'
 }
 
-group 'com.example'
+group 'UI.Presentation'
 version '1.0-SNAPSHOT'
 
 repositories {
@@ -25,8 +25,8 @@ tasks.withType(JavaCompile) {
 }
 
 application {
-    mainModule = 'com.example.monsterschach'
-    mainClass = 'com.example.monsterschach.HelloApplication'
+    mainModule = 'UI.Presentation'
+    mainClass = 'UI.Presentation.MonsterApplication'
 }
 
 javafx {
